# ecma262

./: CMakeLists.txt  README.md  package.json
include/: estring.h
src/: CMakeLists.txt  string.cpp
tests/: CMakeLists.txt  main.cpp
